--- a/workwithus.html
+++ b/workwithus.html
@@ -35,6 +35,23 @@
             <a href="#" class="nav-link">EVENTS</a>
         </div>
     </div>
+    <h1 style="text-align: center;">Work With Us</h1>
+    <div class="workwithus-container">
+        <div class="workwithus">
+            <div class="workwithus-image" style="background-image: url('./images/workwithus/loishorua.jpg');"></div>
+            <div style="padding: 0em 1em;">
+                <h2>Loishorua</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dicta, inventore porro modi temporibus praesentium. Unde quis cupiditate maiores esse in itaque beatae asperiores et harum delectus exercitationem vel veritatis sit animi voluptas accusantium, laudantium quasi excepturi provident ex ea atque recusandae eum? Totam illo modi similique molestias at laboriosam.</p>
+            </div>
+        </div>
+        <div class="workwithus">
+            <div class="workwithus-image" style="background-image: url('./images/workwithus/dmitri.jpg');"></div>
+            <div style="padding: 0em 1em;">
+                <h2>House of Dmitri</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dicta, inventore porro modi temporibus praesentium. Unde quis cupiditate maiores esse in itaque beatae asperiores et harum delectus exercitationem vel veritatis sit animi voluptas accusantium, laudantium quasi excepturi provident ex ea atque recusandae eum? Totam illo modi similique molestias at laboriosam.</p>
+            </div>
+        </div>
+    </div>
 </body>
 <script>
     navdropdown = document.getElementById("navdropdown")
