--- a/locations.html
+++ b/locations.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 
@@ -26,15 +28,16 @@
 <body>
     <div class="navbar">
         <img src="./logos/logo.png" alt="logo" class="nav-logo">
-        <div>
-            <a href="./index.html" class="nav-link">WELCOME</a>
-            <a href="./ourstory.html" class="nav-link">OUR STORY</a>
-            <a href="./locations.html" class="nav-link">HOURS & LOCATIONS</a>
-            <a href="./menu.html" class="nav-link">NAIROWUA MENU</a>
-            <a href="./reservations.html" class="nav-link">RESERVATIONS</a>
-            <a href="./store.html" class="nav-link">STORE</a>
-            <a href="./giftcards.html" class="nav-link">GIFT CARDS</a>
-            <a href="#" class="nav-link">AROMATICA BEVERLY HILLS</a>
+        <div class="navdropdown-container">
+            <img src="./logos/burger-bar.png" alt="burgerbar" class="burgerbar" id="burgerbar" onclick="toggleDropdown()">
+            <div class="navdropdown hidden" id="navdropdown">
+                <a href="./index.html" class="nav-link">HOME</a>
+                <a href="./ourstory.html" class="nav-link">OUR STORY</a>
+                <a href="./locations.html" class="nav-link">HOURS & LOCATIONS</a>
+                <a href="./reservations.html" class="nav-link">RESERVATIONS</a>
+                <a href="./store.html" class="nav-link">STORE</a>
+                <a href="./giftcards.html" class="nav-link">GIFT CARDS</a>
+            </div>
         </div>
     </div>
     <div class="bottom-nav">
@@ -43,19 +46,31 @@
             <img src="./logos/instagram.png" alt="instagram" style="height: 1.2em; margin-left: 1em;">
             <img src="./logos/spotify.png" alt="spotify" style="height: 1.2em; margin-left: 1em;">
         </div>
-        <div>
-            <a href="#" class="nav-link">BRING DANTE HOME</a>
-            <a href="#" class="nav-link">COLLABORATIONS</a>
+        <div style="display: flex; align-items: center;">
+            <a href="./workwithus.html" class="nav-link">WORK WITH US</a>
             <a href="#" class="nav-link">POP-UPS</a>
             <a href="#" class="nav-link">PRESS</a>
             <a href="#" class="nav-link">CONTACTS</a>
             <a href="#" class="nav-link">EVENTS</a>
-            <a href="#" class="nav-link">WORK WITH US</a>
         </div>
     </div>
-    <div class="carousel" id="carousel" style="background-image: url('./images/locations/locations1.avif');">
-        <div class="carousel-arrow" onclick="carouselSub()"><img src="./images/arrow-left.png" alt="leftarrow" style="height: 2em;"></div>
-        <div class="carousel-arrow" onclick="carouselAdd()"><img src="./images/arrow-right.png" alt="rightarrow" style="height: 2em;"></div>
+    <div class="carousel slide" id="locationsCarousel" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="carousel-image" style="background-image: url('./images/locations/locations1.avif');"></div>
+            </div>
+            <div class="carousel-item">
+                <div class="carousel-image" style="background-image: url('./images/locations/locations2.avif');"></div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#locationsCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#locationsCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
     <div class="location-details">
         <div style="width: 50%; text-align: center;">
@@ -84,23 +99,10 @@
     </div>
 </body>
 <script>
-    carousel = document.getElementById("carousel")
-    carouselPosition = 1
+    navdropdown = document.getElementById("navdropdown")
 
-    function carouselAdd() {
-        carouselPosition += 1
-        if (carouselPosition > 2){
-            carouselPosition = 1
-        }
-        carousel.style.backgroundImage = `url('./images/locations/locations${carouselPosition}.avif')`
-    }
-
-    function carouselSub() {
-        carouselPosition -= 1
-        if (carouselPosition < 1) {
-            carouselPosition = 2
-        }
-        carousel.style.backgroundImage = `url('./images/locations/locations${carouselPosition}.avif')`
+    function toggleDropdown() {
+        navdropdown.classList.toggle("hidden")
     }
 </script>
 </html>
