--- a/index.html
+++ b/index.html
@@ -229,8 +229,162 @@
         <div class="menu-title">
             <h1>Lunch</h1>
         </div>
+        <div style="margin-top: 1em; border: 1px solid white; padding: 0.5em; text-align: center; font-size: 1.2em;">Tapas</div>
         <div class="menu-section-div">
-
+            <div class="menu-section">
+                <div>
+                    <div class="menu-item-head">
+                        <p>Samosa</p>
+                        <p>Ksh 490/-</p>
+                    </div>
+                    <p class="menu-item-desc">Chicken and coriander served with mango chutney Paneer and spinach served sweet and sour</p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Chicken Wings</p>
+                        <p>Ksh 1100/1850/-</p>
+                    </div>
+                    <p class="menu-item-desc">Bbq sauce, piripiri sauce, Korean sauce ,plain crispy</p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Panko Fried Calamari</p>
+                        <p>Ksh 1200/-</p>
+                    </div>
+                    <p class="menu-item-desc">Served with dynamite sauce or tartar sauce</p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Vietnamese Summer Rolls</p>
+                        <p>Veg Ksh 1100/- Chicken Ksh 1300/-</p>
+                    </div>
+                    <p class="menu-item-desc">Rice noodles , avocado, mango , red cabbage, cucumber, nuts with spicy peanut sauce</p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Baby Back Ribs</p>
+                        <p>Ksh 1550/2500/-</p>
+                    </div>
+                    <p class="menu-item-desc">With bbq sauce ,piripiri sauce ,Korean sauce</p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Thai Fish Cakes</p>
+                        <p>Ksh 1100/-</p>
+                    </div>
+                    <p class="menu-item-desc">With Tzatziki sauce</p>
+                </div>
+            </div>
+            <div class="menu-section">
+                <div>
+                    <div class="menu-item-head">
+                        <p>Croquettes</p>
+                        <p>Ksh 1000/-</p>
+                    </div>
+                    <p class="menu-item-desc"></p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Creamy Chicken</p>
+                        <p>Ksh 1000/-</p>
+                    </div>
+                    <p class="menu-item-desc"></p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Spinach and Feta</p>
+                        <p>Ksh 1000/-</p>
+                    </div>
+                    <p class="menu-item-desc"></p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Yakitori</p>
+                        <p>Ksh 1200/-</p>
+                    </div>
+                    <p class="menu-item-desc">Skewered chicken marinated in teriyaki sauce presented on small bbq jikos</p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Tuna or Salmon Tatak</p>
+                        <p>Ksh 2000/-</p>
+                    </div>
+                    <p class="menu-item-desc">Served with garlic sesame soy sauce</p>
+                </div>
+            </div>
+        </div>
+        <div style="margin-top: 1em; border: 1px solid white; padding: 0.5em; text-align: center; font-size: 1.2em;">Nairowua Carpaccio Special</div>
+        <div class="menu-section-div">
+            <div class="menu-section">
+                <div>
+                    <div class="menu-item-head">
+                        <p>Salmon Carpaccio</p>
+                        <p>Ksh 2000/-</p>
+                    </div>
+                    <p class="menu-item-desc">With arugula, avacado and lime</p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Tuna Carpaccio</p>
+                        <p>Ksh 1800/-</p>
+                    </div>
+                    <p class="menu-item-desc">With capers,and pine nut</p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Trio Carpaccio</p>
+                        <p>Ksh 2600/-</p>
+                    </div>
+                    <p class="menu-item-desc">White snapper , kingfish,tuna capers , salmon</p>
+                </div>
+            </div>
+        </div>
+        <div style="margin-top: 1em; border: 1px solid white; padding: 0.5em; text-align: center; font-size: 1.2em;">Tapas Made for Sharing</div>
+        <div class="menu-section-div">
+            <div class="menu-section">
+                <div>
+                    <div class="menu-item-head">
+                        <p>Moroccan Lamb Kofta</p>
+                        <p>Ksh 1350/-</p>
+                    </div>
+                    <p class="menu-item-desc">6 mild spicy and grilled minced lamb meat served with sweet tangy sauce and flat bread</p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Quesadillas</p>
+                        <p>Ksh 1300/-</p>
+                    </div>
+                    <p class="menu-item-desc">Flour tortillas parcel filled with cheddar cheese and a choice of either spinach and mushroom : chicken, mixed peppers and onions</p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Spicy Beef Samosa</p>
+                        <p>Ksh 1300/-</p>
+                    </div>
+                    <p class="menu-item-desc">6 mild flavored samosa served with sweet and sour sauce</p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>SIMSIM Beef Lollipop</p>
+                        <p>Ksh 1400/-</p>
+                    </div>
+                    <p class="menu-item-desc">Oriental flavored minced beef with hints of spring onion soy and ginger on asian slaw</p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Nairowua Nachos Veg</p>
+                        <p>Ksh 1400/- plus Chicken 1650/-</p>
+                    </div>
+                    <p class="menu-item-desc">With bbq sauce ,piripiri sauce ,Korean sauce</p>
+                </div>
+                <div>
+                    <div class="menu-item-head">
+                        <p>Antipasto Platter</p>
+                        <p>Ksh 2100/-</p>
+                    </div>
+                    <p class="menu-item-desc">Prosciutto, Milano salami, marinated olives,feta, camembert cheese, cherry tomatoes, humus,and pita bread</p>
+                </div>
+            </div>
         </div>
     </div>
     <script>
